Add front-matter and marked to allow use markdown files as data source

--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "compression": "^1.7.1",
+    "front-matter": "^4.0.2",
+    "marked": "^2.0.3",
     "polka": "next",
     "sirv": "^1.0.0"
   },
