--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
           perl-version: '5.34'
           
       # Runs a single command using the runners shell
-      - name: Install dependencies
-        run: cpanm --installdeps .
+      #- name: Install dependencies
+      #  run: cpanm --installdeps .
       - name: Test
         run: prove -lv t
