--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,10 +16,8 @@ jobs:
       - uses: actions/checkout@v2
       - uses: shogo82148/actions-setup-perl@v1
         with:
-          perl-version: '5.34'
+          perl-version: '5.32'
           
       # Runs a single command using the runners shell
-      #- name: Install dependencies
-      #  run: cpanm --installdeps .
-      - name: Test
-        run: prove -lv t
+      - name: Check
+        run: perl -c gensite.pl
